# Movie-recommendation-system

./: .gitignore
backend/: main.py  pyproject.toml
backend/app/endpoints/: serach_router.py  top_100_movies.py  top_category_router.py
backend/app/models/: movies_model.py
frontend/: index.html  package-lock.json  package.json
frontend/components/: CodeBlock.jsx  CustomPagination.jsx  Footer.jsx  MovieCard.jsx  MovieCardSkeleton.jsx  MovieList.jsx  Navbar.jsx
frontend/pages/: About.jsx  Home.jsx  Top100.jsx
frontend/src/: App.css  App.jsx  SearchResults.jsx  index.css
